apps/peertube/peertube-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: peertube
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
  hostnames:
    - peertube.6j0.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "0s"
        backendRequest: "0s"
      backendRefs:
        - name: peertube
          port: 80
